@@ -1,3 +1,7 @@
+2017-08-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix max decimals
+
 2017-07-31 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Use default evaluation options with approximate calculation in plot function
